<resources>
    <string name="app_name">UTS</string>
    <string name="welcome_title">Welcome to Kukuliner</string>
    <string name="welcome_desc">Discover Amazing Thing Near Around You</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="googleplus">GooglePlus</string>
    <string name="skip">SKIP</string>
    <string name="smartphone">Smartphone</string>
    <string name="or_connect_using">Or connect using</string>
</resources>