<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/backgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/purple"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_logo"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="-100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_title"
                android:textSize="18sp"
                android:layout_marginTop="32dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_desc"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:gravity="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_shape"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape2"
                android:textColor="@color/purple"
                android:textSize="16sp"
                android:text="@string/sign_up"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_connect_using"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textColor="@android:color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp">

                <ImageButton
                    android:layout_height="40dp"
                    android:layout_width="40dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/facebook"
                    android:scaleType="fitCenter"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_facebook" />

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/twitter"
                    android:scaleType="fitCenter"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_twitter"/>

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/googleplus"
                    android:scaleType="fitCenter"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_googleplus"/>

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/smartphone"
                    android:scaleType="fitCenter"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_smartphone"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:gravity="center" />

</LinearLayout>